parcial04 - add member update pesistance
